2007-11-29  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-file-changes-queue.[ch]:
	Add some GFile version and rename the old to _by_uri
	
        * libnautilus-private/nautilus-file-operations.c:
	Emit change events
	
        * libnautilus-private/nautilus-file-operations-progress.c:
        * libnautilus-private/nautilus-file.c:
        * libnautilus-private/nautilus-icon-dnd.c:
        * libnautilus-private/nautilus-metafile.c:
        * libnautilus-private/nautilus-monitor.c:
        * src/file-manager/fm-directory-view.c:
        * src/file-manager/fm-icon-view.c:
	Update to latest APIs

2007-11-23  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-file-operations.c:
	Better status message when copying one folder
	
        * libnautilus-private/nautilus-progress-info.c:
	Correct tooltip message for status icon

2007-11-23  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-file-operations.c:
	Nicer progress texts
	
        * libnautilus-private/nautilus-progress-info.c:
	Hide progress window when last op finishes.

2007-11-23  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-directory-async.c:
	Don't free uninitialized memory.
	
        * libnautilus-private/nautilus-file-operations.c:
        * libnautilus-private/nautilus-progress-info.[ch]:
	Add progress info dialog

2007-11-22  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-file-operations.c:
	Handle debuting URIs in file copy op
	
        * src/file-manager/fm-directory-view.c:
	Use new nautilus_file_operations_copy for copy.
	Make debuting_uri hash into debuting_files in new
	API. Convert for old calls.

2007-11-22  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-file-operations.c:
	Add run_warning and run_error to simplify the
	code for error dialogs.

2007-11-22  Alexander Larsson  <alexl@redhat.com>
