@@ -34,16 +34,18 @@ void nautilus_file_changes_queue_file_removed                    (GFile      *lo
 void nautilus_file_changes_queue_file_removed_by_uri             (const char *uri);
 void nautilus_file_changes_queue_file_moved                      (const char *from_uri,
 								  const char *to_uri);
-void nautilus_file_changes_queue_schedule_metadata_copy          (const char *from_uri,
+void nautilus_file_changes_queue_schedule_metadata_copy          (GFile *from,
+								  GFile *to);
+void nautilus_file_changes_queue_schedule_metadata_copy_by_uri   (const char *from_uri,
 								  const char *to_uri);
 void nautilus_file_changes_queue_schedule_metadata_move          (const char *from_uri,
 								  const char *to_uri);
 void nautilus_file_changes_queue_schedule_metadata_remove        (GFile      *location);
 void nautilus_file_changes_queue_schedule_metadata_remove_by_uri (const char *uri);
-void nautilus_file_changes_queue_schedule_position_set           (const char *uri,
+void nautilus_file_changes_queue_schedule_position_set           (GFile      *location,
 								  GdkPoint    point,
 								  int         screen);
-void nautilus_file_changes_queue_schedule_position_remove        (const char *uri);
+void nautilus_file_changes_queue_schedule_position_remove        (GFile      *location);
 
 void nautilus_file_changes_consume_changes                       (gboolean    consume_all);
 
